--- a/carte.html
+++ b/carte.html
@@ -20,8 +20,15 @@
     </style>
   </head>
   <body>
+
+<h3 id="domicile"> La position de mon domicile </h3>
+<p id="latitude"> Latitude : 36.8374946 </p> 
+<p id="longitude"> Longitude : 10.1927389 </p>
     <div id="map"></div>
     <script>
+    	var pLatitude = document.getElementById("latitude");
+	var pLongitude = document.getElementById("longitude");
+	var hDomicile = document.getElementById("domicile");
       // Note: This example requires that you consent to location sharing when
       // prompted by your browser. If you see the error "The Geolocation service
       // failed.", it means you probably did not give permission for the browser to
@@ -36,11 +43,17 @@
 
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
+
           navigator.geolocation.getCurrentPosition(function(position) {
             var pos = {
               lat: position.coords.latitude,
               lng: position.coords.longitude
+
             };
+			pLongitude.textContent = " ";
+			pLatitude.textContent = " ";
+			hDomicile.textContent = " ";
+
 
             infoWindow.setPosition(pos);
             infoWindow.setContent('Location found.');
@@ -49,6 +62,7 @@
           }, function() {
             handleLocationError(true, infoWindow, map.getCenter());
           });
+
         } else {
           // Browser doesn't support Geolocation
           handleLocationError(false, infoWindow, map.getCenter());
