--- a/Tp1Sol.html
+++ b/Tp1Sol.html
@@ -1,54 +1,85 @@
 <!DOCTYPE html>
 <html>
-<head></head>
-<body onload="getLocation()">
-<p id="Demonstration"></p>
+  <head>
+    <title>Geolocation</title>
+    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+    <meta charset="utf-8">
+    <style>
+      /* Always set the map height explicitly to define the size of the div
+       * element that contains the map. */
+      #map {
+        height: 50%;
+        width: 50%;
+      }
+      /* Optional: Makes the sample page fill the window. */
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+      
+    </style>
+  </head>
+  <body>
 
 <h3 id="domicile"> La position de mon domicile </h3>
 <p id="latitude"> Latitude : 36.8374946 </p> 
 <p id="longitude"> Longitude : 10.1927389 </p>
-<script>
-	var p = document.getElementById("Demonstration");
-	//Nous définisson la fonction que nous avons appelée au haut
-	//Cette fonction récupère les cordonnées géographiques
-	var pLatitude = document.getElementById("latitude");
+    <div id="map"></div>
+    <script>
+    	var pLatitude = document.getElementById("latitude");
 	var pLongitude = document.getElementById("longitude");
 	var hDomicile = document.getElementById("domicile");
-	function getLocation() {
-		if (navigator.geolocation) {
-			//La méthode getCurrentPosition du Modèle (DOM) du navigateur
-			navigator.geolocation.getCurrentPosition(showPosition,showError);
-			
-		} else {
-			//en Cas d'erreur
-			p.innerHTML ="Geolocation n'est pas supporté par ce navigateur !";
-		}
-	}
-	//La fonction d'affichage
-	function showPosition(position) {
-		//Nous écrivons au niveau du paragraphe "demonstartion"
-		pLongitude.textContent = " ";
+      // Note: This example requires that you consent to location sharing when
+      // prompted by your browser. If you see the error "The Geolocation service
+      // failed.", it means you probably did not give permission for the browser to
+      // locate you.
+      var map, infoWindow;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById('map'), {
+          center: {lat: -34.397, lng: 150.644},
+          zoom: 6
+        });
+        infoWindow = new google.maps.InfoWindow;
+
+        // Try HTML5 geolocation.
+        if (navigator.geolocation) {
+
+          navigator.geolocation.getCurrentPosition(function(position) {
+            var pos = {
+              lat: position.coords.latitude,
+              lng: position.coords.longitude
+
+            };
+			pLongitude.textContent = " ";
 			pLatitude.textContent = " ";
 			hDomicile.textContent = " ";
-		p.innerHTML = "Votre latitude : " + position.coords.latitude + "<br> Votre longitude : " + position.coords.longitude;
-	}
-	function showError (error) {
-		switch (error.code){
-			case error.PERMISSION_DENIED:
-			x.innerHTML ="L'utilisateur a rejeté la requête pour la géolocalisation"
-			break;
-			case error.POSITION_UNVAILABLE:
-			x.innerHTML ="Les informations de localisation ne sont pas disponible"
-			break;
-			case error.TIMEOUT:
-			x.innerHTML ="Temps de traitement de la requête est dépassé"
-			break;
-			case error.UNKHOWN_ERROR:
-			x.innerHTML ="Une erreur inconnue est survenue"
-			break;
-		}
-	}
-</script>
 
-</body>
+
+            infoWindow.setPosition(pos);
+            infoWindow.setContent('Location found.');
+            infoWindow.open(map);
+            map.setCenter(pos);
+          }, function() {
+            handleLocationError(true, infoWindow, map.getCenter());
+          });
+
+        } else {
+          // Browser doesn't support Geolocation
+          handleLocationError(false, infoWindow, map.getCenter());
+        }
+      }
+
+      function handleLocationError(browserHasGeolocation, infoWindow, pos) {
+        infoWindow.setPosition(pos);
+        infoWindow.setContent(browserHasGeolocation ?
+                              'Error: The Geolocation service failed.' :
+                              'Error: Your browser doesn\'t support geolocation.');
+        infoWindow.open(map);
+      }
+    </script>
+    <script async defer
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWzTIfMBnzhfv52dhM_2gP55CPvUtP9UE&callback=initMap">
+    </script>
+  </body>
 </html>
