J'ai ajoutée le code du marker mais sa fonctionne pas

--- a/Tp1Sol.html
+++ b/Tp1Sol.html
@@ -93,6 +93,12 @@
 			break;
 		}
 	}
+	marker = new google.maps.Marker({
+    position: latlng,
+    map: map,
+    title:"Vous êtes ici",
+    icon: "fleche.jpg"
+});
     </script>
 
     <script async defer
