--- a/carte.html
+++ b/carte.html
@@ -36,26 +36,36 @@
       // locate you.
       var map, infoWindow;
       function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 6
-        });
+        
         infoWindow = new google.maps.InfoWindow;
 
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
 
           navigator.geolocation.getCurrentPosition(function(position) {
-            var pos = {
+            var myLatLng = {
               lat: position.coords.latitude,
               lng: position.coords.longitude
 
             };
+
 			pLongitude.textContent = " ";
 			pLatitude.textContent = " ";
 			hDomicile.textContent = " ";
+   var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 4,
+    center: myLatLng
+  });
 
-
+  var marker = new google.maps.Marker({
+    position: myLatLng,
+    map: map,
+    title: 'Hello World!'
+  });       
+// map = new google.maps.Map(document.getElementById('map'), {
+//           center: pos,
+//           zoom: 6
+//         });
             infoWindow.setPosition(pos);
             infoWindow.setContent('Location found.');
             infoWindow.open(map);
@@ -77,6 +87,21 @@
                               'Error: Your browser doesn\'t support geolocation.');
         infoWindow.open(map);
       }
+      // function initMap() {
+  // var myLatLng = {lat: 36.8374946, lng: 10.1927389};
+
+  // var map = new google.maps.Map(document.getElementById('map'), {
+  //   zoom: 4,
+  //   center: myLatLng
+  // });
+
+  // var marker = new google.maps.Marker({
+  //   position: myLatLng,
+  //   map: map,
+  //   title: 'Hello World!'
+  // });
+//}
+
     </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWzTIfMBnzhfv52dhM_2gP55CPvUtP9UE&callback=initMap">
