--- a/Tp1Sol.html
+++ b/Tp1Sol.html
@@ -26,6 +26,12 @@
 <p id="latitude"> Latitude : 36.8374946 </p> 
 <p id="longitude"> Longitude : 10.1927389 </p>
     <div id="map"></div>
+
+<button onclick="suivi()"> Marche </button>
+<button onclick="Arret()"> Stop </button>
+<div id="infoposition"></div>
+
+
     <script>
     	var pLatitude = document.getElementById("latitude");
 	var pLongitude = document.getElementById("longitude");
@@ -36,33 +42,54 @@
       // locate you.
       var map, infoWindow;
       function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
-          center: {lat: -34.397, lng: 150.644},
-          zoom: 6
-        });
+        
         infoWindow = new google.maps.InfoWindow;
 
         // Try HTML5 geolocation.
         if (navigator.geolocation) {
 
           navigator.geolocation.getCurrentPosition(function(position) {
-            var pos = {
+            var myLatLng = {
               lat: position.coords.latitude,
               lng: position.coords.longitude
 
             };
+
 			pLongitude.textContent = " ";
 			pLatitude.textContent = " ";
 			hDomicile.textContent = " ";
+			var inf = document.getElementById("");
+	//Fonction de callback en cas de succès
+	function surveillePosition(position) {
+		var infopos = "Position déterminée :\n";
+		infopos += "Latitude : "+position.coords.latitude +"<br>";
+		infopos += "Longitude : "+position.coords.longitude +"<br>";
+		infopos += "Altitude : "+position.coords.altitude +"<br>";
+		infopos += "Vitesse : "+position.coords.speed +"<br>";
+		document.getElementById("infoposition").innerHTML =infopos;
+	}
+	var survId = navigator.geolocation.watchPosition(surveillePosition);
+   var map = new google.maps.Map(document.getElementById('map'), {
+    zoom: 4,
+    center: myLatLng
+  });
 
-
+  var marker = new google.maps.Marker({
+    position: myLatLng,
+    map: map,
+    title: 'Hello World!'
+  });       
+// map = new google.maps.Map(document.getElementById('map'), {
+//           center: pos,
+//           zoom: 6
+//         });
             infoWindow.setPosition(pos);
             infoWindow.setContent('Location found.');
             infoWindow.open(map);
             map.setCenter(pos);
           }, function() {
             handleLocationError(true, infoWindow, map.getCenter());
-          },showError);
+          });
 
         } else {
           // Browser doesn't support Geolocation
@@ -77,30 +104,22 @@
                               'Error: Your browser doesn\'t support geolocation.');
         infoWindow.open(map);
       }
-      function showError (error) {
-		switch (error.code){
-			case error.PERMISSION_DENIED:
-			x.innerHTML ="L'utilisateur a rejeté la requête pour la géolocalisation"
-			break;
-			case error.POSITION_UNVAILABLE:
-			x.innerHTML ="Les informations de localisation ne sont pas disponible"
-			break;
-			case error.TIMEOUT:
-			x.innerHTML ="Temps de traitement de la requête est dépassé"
-			break;
-			case error.UNKHOWN_ERROR:
-			x.innerHTML ="Une erreur inconnue est survenue"
-			break;
-		}
-	}
-	marker = new google.maps.Marker({
-    position: latlng,
-    map: map,
-    title:"Vous êtes ici",
-    icon: "fleche.jpg"
-});
-    </script>
+      // function initMap() {
+  // var myLatLng = {lat: 36.8374946, lng: 10.1927389};
 
+  // var map = new google.maps.Map(document.getElementById('map'), {
+  //   zoom: 4,
+  //   center: myLatLng
+  // });
+
+  // var marker = new google.maps.Marker({
+  //   position: myLatLng,
+  //   map: map,
+  //   title: 'Hello World!'
+  // });
+//}
+
+    </script>
     <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWzTIfMBnzhfv52dhM_2gP55CPvUtP9UE&callback=initMap">
     </script>
