nothing changes just for merge

--- a/Geoloc2.html
+++ b/Geoloc2.html
@@ -7,7 +7,7 @@
 <body>
 <!-- Un élement HTML recueillir l'affichage -->
 <button onclick="suivi()"> Marche </button>
-<button onclick="Arret()"> Marche </button>
+<button onclick="Arret()"> Stop </button>
 <div id="infoposition"></div>
 <script>
 	var inf = document.getElementById("");
